Clear ImageManager request queue after serving

Clear the request queue after serviing requests. Also do not queue too
many requests. Sometimes opening database could take a lot of time due
to disk access being slow on some devices. In these cases it is faster
to serve from network. So stop queuing after 100 requests.

BUG=806397

Change-Id: Id2e8662c3ed4e731cec32e368109f5b4567820e3