components/suggestions/image_manager.cc
@@ -135,8 +135,8 @@ void ImageManager::GetImageForURL(const GURL& url, ImageCallback callback) {
   if (database_.get() && !database_ready_) {
     // Once database is initialized, it will serve pending requests from either
     // cache or network.
-    QueueCacheRequest(url, image_url, callback);
-    return;
+    if (QueueCacheRequest(url, image_url, callback))
+      return;
   }
 
   ServeFromCacheOrNetwork(url, image_url, callback);
@@ -157,20 +157,29 @@ bool ImageManager::GetImageURL(const GURL& url, GURL* image_url) {
   return true;
 }
 
-void ImageManager::QueueCacheRequest(
-    const GURL& url, const GURL& image_url, ImageCallback callback) {
+bool ImageManager::QueueCacheRequest(const GURL& url,
+                                     const GURL& image_url,
+                                     ImageCallback callback) {
   // To be served when the database has loaded.
   ImageCacheRequestMap::iterator it = pending_cache_requests_.find(url);
-  if (it == pending_cache_requests_.end()) {
-    ImageCacheRequest request;
-    request.url = url;
-    request.image_url = image_url;
-    request.callbacks.push_back(callback);
-    pending_cache_requests_[url] = request;
-  } else {
+  if (it != pending_cache_requests_.end()) {
     // Request already queued for this url.
     it->second.callbacks.push_back(callback);
+    return true;
   }
+
+  // If there are more than 100 requests, then fetching from network could be
+  // faster.
+  const size_t kMaxPendingRequests = 100;
+  if (pending_cache_requests_.size() >= kMaxPendingRequests)
+    return false;
+
+  ImageCacheRequest request;
+  request.url = url;
+  request.image_url = image_url;
+  request.callbacks.push_back(callback);
+  pending_cache_requests_[url] = request;
+  return true;
 }
 
 void ImageManager::OnCacheImageDecoded(
@@ -298,6 +307,7 @@ void ImageManager::ServePendingCacheRequests() {
       ServeFromCacheOrNetwork(request.url, request.image_url, *callback_it);
     }
   }
+  pending_cache_requests_.clear();
 }
 
 }  // namespace suggestions
